# rl_balancing

./: .gitignore  LICENSE  README.md  docker-compose.yaml
docker/: dockerfile  entrypoint.sh
scripts/: setup.sh
workspace/src/descriptions/balancing_platform_2d_description/: CMakeLists.txt  package.xml
workspace/src/descriptions/balancing_platform_2d_description/launch/: view_robot.launch.py
workspace/src/descriptions/balancing_platform_2d_description/meshes/: arm.stl  platform.stl
workspace/src/descriptions/balancing_platform_2d_description/urdf/: robot.urdf.xacro  robot.xml  robot_camera.xml  robot_pd.xml
workspace/src/rl_policies/: pyproject.toml
workspace/src/rl_policies/logs/: rl_successful_setups.md
workspace/src/rl_policies/logs/Experimento002/: cfgs.pkl
workspace/src/rl_policies/logs/Experimento003/: cfgs.pkl
workspace/src/rl_policies/logs/Experimento006/: cfgs.pkl
workspace/src/rl_policies/logs/Experimento007/: cfgs.pkl
workspace/src/rl_policies/rl_policies/balancing_platform_2d/: eval.py  eval_teleop.py  train.py
workspace/src/rl_policies/rl_policies/balancing_platform_2d/camera/: mj_camera.py
workspace/src/rl_policies/rl_policies/balancing_platform_2d/configs/: x_pos_genesis.py  x_pos_pd_config.py
workspace/src/rl_policies/rl_policies/balancing_platform_2d/envs/: x_pos_env_genesis.py  x_pos_env_genesis_mass_friction.py
workspace/src/rl_policies/rl_policies/balancing_platform_2d/pd_controller/: eval_teleop_inverse_kinematics.py  eval_teleop_pd.py
workspace/src/rl_policies/rl_policies/balancing_platform_2d/utils/: evaluate_metrics_pd.py  evaluate_metrics_rl.py  evaluate_timestep_init.py  generate_metrics.py  generate_metrics_motors.py  tensorboard_graphs.py
workspace/src/rl_policies/rl_policies/balancing_platform_3d/: eval.py  eval_teleop.py  train.py
workspace/src/rl_policies/rl_policies/balancing_platform_3d/configs/: pid_config.py  xy_pos_config_mass_friction.py  xyz_pos_config.py
workspace/src/rl_policies/rl_policies/balancing_platform_3d/envs/: xy_pos_env.py  xy_pos_env_mass_friction.py  xy_pos_env_mujoco.py  xy_pos_env_mujoco_pd.py  xy_pos_env_mujoco_pd_copy.py
workspace/src/rl_policies/rl_policies/balancing_platform_3d/pd_controller/: eval_teleop_inverse_kinematics.py  eval_teleop_pd.py
workspace/src/rl_policies/rl_policies/balancing_platform_3d/utils/: evaluate_metrics_pd.py  evaluate_metrics_rl.py  evaluate_timestep_init.py  generate_metrics.py
workspace/src/rl_policies/rl_policies/juggling_platform_2d/: eval.py  eval_teleop.py  train.py
workspace/src/rl_policies/rl_policies/juggling_platform_2d/camera/: ball_detector.py  hough_circle_transform_b&w.py  hough_circle_transform_color_version.py  mj_camera.py
workspace/src/rl_policies/rl_policies/juggling_platform_2d/envs/: x_pos_env_genesis.py  x_pos_env_genesis_mass_friction.py
workspace/src/rl_policies/rl_policies/juggling_platform_2d/pd_controller/: eval_teleop_inverse_kinematics.py  eval_teleop_pd.py
workspace/src/rl_policies/rl_policies/juggling_platform_2d/utils/: evaluate_metrics_pd.py  evaluate_metrics_rl.py  evaluate_timestep_init.py  generate_metrics.py  generate_metrics_motors.py  tensorboard_graphs.py
workspace/src/rl_policies/rl_policies/juggling_platform_3d/: eval.py  eval_teleop.py  train.py
workspace/src/rl_policies/rl_policies/juggling_platform_3d/configs/: xy_pos_config.py
workspace/src/rl_policies/rl_policies/juggling_platform_3d/envs/: xy_pos_env.py  xy_pos_env_mass_friction.py  xy_pos_env_mujoco.py  xy_pos_env_mujoco_pd.py  xy_pos_env_mujoco_pd_copy.py
(+57 files in other folders)
