[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_policies"
version = "0.1.0"
description = "Genesis RL Policy Training and Evaluation Package"
authors = [
  { name = "Martín Sotelo", email = "martinsot2004@gmail.com" }
]
license = "MIT" 
requires-python = ">=3.6"

[project.scripts]
balancing_2d_train = "rl_policies.balancing_platform_2d.train:main"
balancing_2d_eval = "rl_policies.balancing_platform_2d.eval:main"
balancing_2d_eval_teleop = "rl_policies.balancing_platform_2d.eval_teleop:main"
balancing_2d_eval_teleop_inverse_kinematics = "rl_policies.balancing_platform_2d.pd_controller.eval_teleop_inverse_kinematics:main"
balancing_2d_eval_teleop_pd = "rl_policies.balancing_platform_2d.pd_controller.eval_teleop_pd:main"

balancing_3d_train = "rl_policies.balancing_platform_3d.train:main"
balancing_3d_eval = "rl_policies.balancing_platform_3d.eval:main"
balancing_3d_eval_teleop = "rl_policies.balancing_platform_3d.eval_teleop:main"
balancing_3d_eval_teleop_inverse_kinematics = "rl_policies.balancing_platform_3d.pd_controller.eval_teleop_inverse_kinematics:main"
balancing_3d_eval_teleop_pd = "rl_policies.balancing_platform_3d.pd_controller.eval_teleop_pd:main"

[tool.setuptools.packages.find]
include = ["rl_policies"]
