<?xml version="1.0"?>
<package format="3">
  <name>juggling_platform_2d_description</name>
  <version>0.0.1</version>
  <description>2D juggling platform description package</description>

  <maintainer email="martinsot2004@gmail.com">Martín Sotelo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
